@@ -1,5 +1,7 @@
 2009-03-04  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
 
+	* src/core/extlib/extPervasives.mli: Excluded printf directives from documentation generation.
+
 	* src/core/extlib/extPrint.mli: More documentation.
 
 	* configure.ac: Now detecting default installation directory only if $prefix is NONE
